--- a/simulate-1/redeem.html
+++ b/simulate-1/redeem.html
@@ -5,6 +5,7 @@
     </div>
 
     <div class="detail-body">
+        <img src="nft.jpg"" />
         <p style="font-size: 14px; color: gray;">
             NFT 合约地址：<span style="user-select: all;">0x1234567890abcdef1234567890abcdef12345678</span>
         </p>
